# home-adiutor

./: .gitignore  README.md  notes.md  setup.cfg
Docs/: Data-Handling.md  Goals.md  Hardware.md  Project-Structure.md
Docs/Modules/: modules_philosophy.md  sample_module.py
Docs/Scheduler/: 5Ws.md  Workflow.md
Local/: README.md  RPI-Home-Aud-flow  docker-compose.yml
Local/Rev2/: Dockerfile  docker-compose.yml  git.Dockerfile
Local/Rev3/: docker-compose.yml  git.Dockerfile
Local/Rev3/nginx-conf/: nginx.conf
Local/Rev3/website/css/: index.css
Local/website/: index.html
Local/website/css/: menubar.css
Local/website/pages/: blog.html
adiutor/: main.py
adiutor/Config/: config-example.yml
adiutor/Main/: coms.py  lang.json  main.py  speech.py
adiutor/Main/Scheduler/: clock.py
src/: main.py
src/Data/: config-example.yml  data.py
src/Scheduler/: clock.py  queue.py
src/Voice/: lang.json
