[metadata]
name = home-adiutor
version = 0.0.1
author = Neopect
author_email = tyler@tylermoen.com
description = The open source module based personal assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/North-Pole-Neon/home-adiutor
project_urls =
    Bug Tracker = https://github.com/North-Pole-Neon/home-adiutor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src